Arreglando la ruta del logo alura

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <img class="logo" src="/img/logoalura.png" alt="Este es el logo de alura" />
+    <img class="logo" src="img/logoalura.png" alt="Este es el logo de alura" />
     <h1 class="titulo-challenge">Challenge Encriptador</h1>
   </header>
   <main>
