--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Challenge Encriptador Oracle One</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
